--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/regcostajr/go-web3
+package: github.com/big-blockchain/go-client-web3
 import:
 - package: golang.org/x/net
   subpackages:
